# esp32-tang

./: .dockerignore  .gitignore  ARCHITECTURE.md  README.md
components/tang_server/: __init__.py  binary_sensor.py  sensor.py  tang_core.cpp  tang_core.h  tang_crypto.cpp  tang_crypto.h  tang_http_handler.cpp  tang_http_handler.h  tang_platform.h  tang_request.h  tang_response.h  tang_server.cpp  tang_server.h  tang_storage.h  text_sensor.py
esphome-tang/: README.md  docker-compose.yml  esp32tang.yaml  esphome-compile.sh  secrets.yaml  tang-init-demo.sh  tang_server.yaml
main/: CMakeLists.txt  TangServer.h  handlers.h  helpers.h  main.cpp
src/: tang_core.cpp  tang_core.h  tang_crypto.cpp  tang_crypto.h  tang_platform.h  tang_request.h  tang_response.h  tang_storage.h
standalone/: arduino_app.cpp  arduino_app.h  arduino_http_server.cpp  arduino_http_server.h  eeprom_tang_storage.cpp  eeprom_tang_storage.h
